--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 @import url(//db.onlinewebfonts.com/c/2547970600ac97f5d9bd0ebcc1f2dd9d?family=Font+Awesome+5+Brands);
 
+/* task 4 - dodać media queries, 768 width, hamburger menu zamiast przycisków menu */
+
+/* 
+end */
+
 html {
   scroll-behavior: smooth;
 }
@@ -42,7 +47,7 @@ body {
   transition: all 0.3s ease;
 }
 
-.navTop a:hover svg {
+.contactLink:hover svg {
   fill: var(--secondary-text-color);
 }
 
@@ -107,7 +112,7 @@ body {
   border: none;
 }
 
-.navTop a {
+.contactLink {
   font-family: "Heebo", sans-serif;
   font-family: "Josefin Sans", sans-serif;
   font-weight: light;
@@ -934,3 +939,186 @@ input[type="submit"]:hover {
 .navTop a:hover svg {
   fill: var(--secondary-text-color);
 } */
+.displayMobile {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .displayMobile {
+    display: contents;
+  }
+  .navMain {
+    display: none;
+  }
+
+  .imageCarousel {
+    height: 450px;
+  }
+  .navTop {
+    padding: 10px 0px 0px 0px;
+  }
+  .contactLink {
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+  .navTop svg {
+    margin-right: 10px;
+    height: 14px;
+  }
+  .containerTop {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-inline: 20px;
+  }
+  .contentMiddle {
+    height: 400px;
+    width: 300px;
+  }
+  .mainTitle {
+    padding: 25px 0px 15px 0px;
+    font-size: 30px;
+    line-height: 45px;
+  }
+  .note {
+    padding: 0px 50px 20px 50px;
+    font-size: 14px;
+  }
+
+  .mainButton {
+    font-size: 15px;
+    padding: 15px 40px;
+  }
+
+  .steps {
+    padding-bottom: 5px;
+  }
+
+  .otherSmallNote {
+    font-size: 13px;
+    padding-top: 40px;
+  }
+  .otherTitle {
+    padding: 5px 0px;
+    font-size: 30px;
+  }
+  .otherNote {
+    font-size: 14px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .cards {
+    grid-template-columns: 1fr;
+  }
+
+  .sideLeftImage {
+    display: none;
+  }
+  .sideRightContent {
+    grid-template-rows: 46px 112px 112px 112px;
+    height: 300px;
+    width: 360px;
+  }
+  .secondaryTitle {
+    font-size: 25px;
+  }
+  .titleCard {
+    font-size: 13px;
+  }
+  .sideNote {
+    font-size: 10px;
+  }
+  .circleDark {
+    width: 68px;
+    height: 68px;
+    margin: 23px;
+  }
+
+  .arrow {
+    position: relative;
+  }
+
+  .leftArrow {
+    position: absolute;
+    left: 32px;
+  }
+  .rightArrow {
+    position: absolute;
+    right: 32px;
+  }
+
+  .hamburgerMenu {
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    width: 30px;
+  }
+
+  .hamburgerIcon {
+    height: 50px;
+    width: 50px;
+  }
+
+  .navLinksMobile {
+    display: flex;
+
+    height: 100vh;
+    width: 80vw;
+    position: fixed;
+    z-index: 1;
+    top: -65px;
+    left: 0;
+    background-color: #f4f4f4;
+    flex-direction: column;
+    transition: transform 0.4s;
+    transform: translateX(-1000px);
+  }
+
+  .open {
+    transform: translateX(0);
+    /* display: block; */
+  }
+  .navLinksMobileContent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+    gap: 10px;
+    
+  }
+
+  .mainLink  {
+    font-size: 15px;
+    font-family: "Josefin Sans", sans-serif;
+    padding: 8px;
+    text-decoration: none;
+    margin-left: 30px;
+    font-size: 25px;
+    color: #252c30;
+    display: block;
+    transition: 0.3s;
+  }
+  .navLinksMobile a:hover,
+  .navLinksMobile a:focus {
+    color:#ffc000;
+  }
+
+  .logo {
+    margin-bottom: 30px;
+    margin-left: 30px;
+    font-size: 30px;
+  }
+  /* nav.navLinksMobile {
+  display: flex;
+  gap: 60px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+} */
+}
